# data-orchestration

./: .env.example  .env.template  .env_encoded  .gitignore  Makefile  README.md  debug_analysis.py  docker-compose.yml  dockerfile  pyproject.toml  pytest.ini  requirements.txt  setup.bat  test_output_harmonization.py  test_phase4_validation.py
.github/: README.md
__backup/: matching.py
configs/: .gitkeep  registry.json
dev/: deploy_staging.py  milestone_2_customer_analysis.py
docs/: DOCUMENTATION_STATUS.md  README.md
memory-bank/: MEMORY_BANK_ANALYSIS.md  RESTRUCTURE_SUMMARY.md  activeContext.md  orderOfOperations.md  productContext.md  progress.md  progress_BACKUP.md  projectbrief.md  solutionDesign.md  systemPatterns.md  techContext.md
notebooks/: complete_xlsx_to_sql_orchestrator_with_comparison.py  database_cleanup_and_column_comparison.ipynb  diagnose_duplicate_columns.ipynb  monday_sync_diagnostics.ipynb  order_list_consolidator.py  order_list_consolidator_v2.py  order_list_schema_discovery.ipynb  pa_token_http_trigger.ipynb
queries/: how_about_it_sample.sql  how_about_that_sample.sql  monday_board_groups_sync_sample.sql  monday_boards_groups_sync_sample.sql  monday_boards_sample.sql
reports/: customers_summary.md
scripts/: deploy_extract_layer.py  extract_ddl.ps1  extract_ddl.py  load_order_list.py  test_sql_enhanced.py  test_sql_with_env.py
sql/: README.md
tasks/: tasks-sync-order-list-monday.md
templates/: dev-task.yml.tpl  migration-task.yml.tpl  monday-board-deployment.yml.tpl  op-task.yml.tpl
test_results/: opus_infrastructure_validation_20250630_165906.json  opus_infrastructure_validation_20250630_170154.json
tests/: README.md  __init__.py  cleanup_test_data.py  debug_mapping.py  logs.md  test_database_query.py  test_db.py  test_debug_actual_api_call.py  test_debug_mapping.py  test_greyson.py  test_minimal_workflow.py  test_monday_integration_complete.py  test_order_type.py  test_staging_debug_simple.py
tools/: README.md  base64env.py  (+24 more)
(+1610 files in other folders)
