[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pipelines"
version = "0.1.0"
description = "AAG Data Orchestration Pipelines"
authors = [{name = "Active Apparel Group"}]
requires-python = ">=3.10"
dependencies = [
    # Core data processing
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    
    # Database connectivity
    "pyodbc>=4.0.39",
    
    # Hybrid snapshot storage
    "pyarrow>=14.0.0",
    "psycopg2-binary>=2.9.0",
    
    # Configuration and environment
    "python-dotenv>=1.0.0",
    "PyYAML>=6.0",
    
    # Logging and utilities
    "colorlog>=6.7.0",
    
    # Excel/reporting
    "openpyxl>=3.1.0",
    "xlsxwriter>=3.1.0",
    
    # Fuzzy matching
    "rapidfuzz>=3.6.1",
    
    # HTTP requests and API integrations
    "requests>=2.31.0",
    "requests_toolbelt>=0.10.1",
    
    # GraphQL
    "gql",
    
    # Data validation
    "cerberus>=1.3.4",
    
    # Data visualization
    "matplotlib>=3.7.0",
    
    # Progress tracking
    "tqdm>=4.66.1",
    
    # Async and API tools
    "aiohttp",
    "jinja2",
    "tomli_w",
    "tomli>=2.0.1",
    
    # Azure services
    "azure-identity",
    "azure-storage-blob",
    "msal",
    
    # Timezone support
    "pytz>=2023.3",
    
    # Type extensions
    "typing-extensions",
]

[project.optional-dependencies]
dev = [
    # Development and testing
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["pipelines*"]

[tool.setuptools.package-data]
"pipelines" = [
    "**/*.sql", "**/*.yaml", "**/*.yml", 
    "**/*.json", "**/*.graphql", "**/*.toml"
]

[project.scripts]
pipelines-order-list = "pipelines.load_order_list.main:main"
pipelines-cms = "pipelines.load_cms.main:main"
pipelines-update = "pipelines.update.main:main"
